Stub in MLS module